pravki ot pashi 3

--- a/css/constants.less
+++ b/css/constants.less
@@ -34,6 +34,7 @@
 @event-fon: #f6eb3d;
 @popular-fon: #35a0cd;
 @social: #55acee;
+@monte-grey: #E3E3E3;
 @hover_title: lighten(@text-color,40%);
 @notebook: ~"(max-height: 800px)";
 @mobile: ~"(max-width: 767px)";
