--- a/css/detail.less
+++ b/css/detail.less
@@ -3,7 +3,7 @@
 
 .introduction{
 	.media-detail  &{
-	border-bottom: solid 1px @grey-fon;
+	border-bottom: solid 1px @monte-grey;
 	font-size: 24px !important;
 	font-family: @special-font;
 	line-height: 1.42 !important;
@@ -712,7 +712,7 @@
 		color: @dark-grey;
 		display: inline-block;
 		font-size: 14px;
-		margin-right: 6px;
+		margin-right: 22px;
 		margin-bottom: 12px;
 		text-transform: capitalize;
 		text-decoration: none;
@@ -1398,7 +1398,7 @@
 		line-height: 1.42;
 		color: @middle-text;
 		padding-bottom: 40px;
-		border-bottom: 1px solid @new-grey;
+		border-bottom: 1px solid @monte-grey;
 	}
 	& .recipe-ingredients{
 		padding: 20px;
