--- a/css/media_block.less
+++ b/css/media_block.less
@@ -376,7 +376,7 @@
     }
   }
   & .title{
-    font-size: 18px;
+    font-size: 15px;
     line-height: 23px;
   }
   & .title-wrap{
@@ -441,6 +441,7 @@
 .media-block--event{
   & .category{
     background-color: @blue;
+    font-weight: normal !important;
     padding: 7px 30px;
     border-radius: 30px;
     display: inline-block;
@@ -784,7 +785,7 @@
       position: absolute;
       width: 60%;
       height: 1px;
-      background-color: @new-grey;
+      background-color: @monte-grey;
       left: 20%;
       bottom: 15px;
     }
