pravki ipad pro

--- a/css/constants.less
+++ b/css/constants.less
@@ -41,6 +41,7 @@
 @tablet: ~"(min-width: 768px) and (max-width: 992px)";
 @medium: ~"(min-width: 992px) and (max-width: 1200px)";
 @mobile_tablet: ~"(max-width: 992px)";
+@mobile_tablet_medium: ~"(max-width: 1200px)";
 @small_tablet: ~"(min-width: 451px) and (max-width: 767px)";
 @smartphone: ~"(max-width: 450px)";
 @large: ~"(min-width: 1200px)";
