--- a/css/detail.less
+++ b/css/detail.less
@@ -691,10 +691,12 @@
 	}
 	& .show_map{
 		cursor: pointer;
-		background: url(../img/explore.svg) no-repeat left center;
+		background: url(../img/explore.svg) no-repeat left 3px;
 		padding-left: 28px;
 		display: inline-block;
 		margin-left: 5px;
+		max-width: 230px;
+		vertical-align: top;
 	}
 }
 & .tags-block{
