--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -50,9 +50,7 @@
     padding: 21px 0 19px 0 ;
     transition: top .5s ease-out;
     @media @mobile{
-    	position: static;
-    	border-bottom: none;
-    	height: auto;
+    	display: none;
     }	
 		& .search-block{
 			margin-top: 12px;
