--- a/css/style.less
+++ b/css/style.less
@@ -885,6 +885,15 @@ html.js fieldset.collapsed{
 	& form{
 		display: none;
 	}
+	
+}
+.view-id-cyprus_reviews.view-display-id-culture, .view-display-id-pop_places,
+.view-id-cyprus_reviews.view-display-id-entertainment, .view-display-id-top3_recipes{
+	& .col-st-6:last-child{
+		@media @small_tablet{
+			margin-left: 25%;
+		}
+	}
 }
 .butn{
 	border: none;
