--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -95,6 +95,7 @@
 				&.active-trail>a, & a.active { 
 					color: @blue;
 					border-color: @blue;
+					font-weight: bold;
 				}					
 				@media @medium{										
 					margin: 0 10px;
@@ -290,7 +291,8 @@
 					text-decoration: underline;
 				}
 				&.active{
-					color: @blue;					
+					color: @blue;		
+					font-weight: bold;			
 				}
 			}
 			&.first a{
