--- a/css/media_block.less
+++ b/css/media_block.less
@@ -544,7 +544,7 @@
     }
     & a:after{
       background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 30%, rgba(0,0,0,.4) 50%, rgba(0,0,0,.2) 80%, rgba(0,0,0,.0));
-      opacity: 1;
+      opacity: 0.6;
     } 
   }
   & .container{
@@ -640,8 +640,10 @@
 .media-block--top3places .container{
   cursor: pointer;
 }
-.articles--index.owl-carousel, .affiche-carousel.owl-carousel{
+.articles--index{
   margin-bottom: 40px;
+}
+.articles--index.owl-carousel, .affiche-carousel.owl-carousel{  
   overflow: hidden;
   @media @mobile{
     margin-bottom: 20px;
@@ -776,6 +778,7 @@
         left: 0;
         background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
         z-index: 10;
+        opacity: 0.8;
       }
     }
   }
@@ -1108,6 +1111,7 @@
     left: 30px;
     margin-top: 0;
     font-weight: bold;
+    z-index: 100;
   }  
   & .text{
     position: absolute;
