--- a/css/style.less
+++ b/css/style.less
@@ -371,7 +371,8 @@ a:focus {  color: inherit; text-decoration: none;}
 	margin-bottom: 0;
 	padding-bottom: 20px;
 }
-.profile, .user form, .user .sticky-table, .page-node-edit form, .page-node-add form, .node-type-list{
+.profile, .user form, .user .sticky-table, .page-node-edit form, 
+.page-node-add form, .node-type-list, #taxonomy-form-term, #i18n-taxonomy-translation-term-form{
 	.quasi-container();
 	margin-bottom: 0;
 	margin-top: 0;
@@ -1709,5 +1710,26 @@ img.monochrome {
 
 		padding: 0 15px;
 		margin-bottom: 20px;
+	}
+}
+.page-node-edit.node-type-review,
+.page-node-add.page-node-add-review{
+	& .form-item-field-section-und-8{
+		display: none;
+	}
+}
+.page-taxonomy-term {
+	& .view-taxonomy-term{
+		min-height: 300px;
+	}
+	& .view-content{
+		margin-bottom: 100px;
+		& ul{
+			margin-left: 50px;
+			& li{
+				font-size: 18px;
+				margin: 20px 0;
+			}
+		}
 	}
 }
