--- a/css/media_block.less
+++ b/css/media_block.less
@@ -67,7 +67,7 @@
         //opacity: 0;
         height: 100%;
         width: 100%;
-        background: rgba(0,0,0,.2);
+        background: rgba(0,0,0,.1);
         pointer-events: none;
         -webkit-transition: all .5s ease-in-out;
         transition: all .5s ease-in-out;
@@ -141,7 +141,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
         z-index: 10;
       }   
     }
@@ -246,7 +246,7 @@
       height: 100%;
       top: 0;
       left: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
       z-index: 10;
     }   
   }
@@ -442,7 +442,7 @@
   & .category{
     background-color: @blue;
     font-weight: normal !important;
-    padding: 7px 30px;
+    padding: 7px 15px;
     border-radius: 30px;
     display: inline-block;
     color:white;
@@ -450,13 +450,14 @@
     top: 30px;
     left: 30px;
     z-index: 10;
+    letter-spacing: -0.7px;
     @media @medium{
       padding: 7px 10px;
-      font-size: 12px;
+      font-size: 11px;
     }
     @media @tablet{
       padding: 7px 10px;
-      font-size: 12px;
+      font-size: 11px;
     }
     & .date{
       display: inline-block;
@@ -776,7 +777,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
         z-index: 10;
         opacity: 0.8;
       }
@@ -932,7 +933,7 @@
           height: 100%;
           top: 0;
           left: 0;
-          background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
           z-index: 10;
         } 
       }      
@@ -1088,7 +1089,7 @@
       height: 100%;
       top: 0;
       left: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
       z-index: 10;
     }
   }
@@ -1265,7 +1266,7 @@
       height: 100%;
       top: 0;
       left: 0;
-      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.2) 50%,rgba(0,0,0,.7));      
+      background-image: linear-gradient(to bottom, rgba(0,0,0,.0) 17%, rgba(0,0,0,.1) 50%,rgba(0,0,0,.5));      
       z-index: 10;
     } 
   }
@@ -1338,7 +1339,7 @@
  }
 }
 .view-id-blog .blog-wrap--3 .col-blog:first-child{
- margin-left: 12%;
+ //margin-left: 12%;
  @media @mobile_tablet{
    margin-left: 0;
  }
