--- a/css/media_block.css
+++ b/css/media_block.css
@@ -577,6 +577,10 @@
 .blog-block .title {
   font-size: 15px;
   line-height: 23px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .blog-block .title-wrap {
   height: 70px;
@@ -605,9 +609,6 @@
   .blog-wrap--3 .col-lg-3 {
     width: 33.33333333%;
   }
-}
-.media-block--blogs {
-  text-align: center;
 }
 .media-block--blogs .statistic {
   width: 100%;
@@ -841,6 +842,18 @@
   padding: 7px 20px;
   border-radius: 30px;
   min-width: 170px;
+}
+.media-block--index .category.category-video a,
+.media-block--top3review .category.category-video a,
+.media-block--special .category.category-video a,
+.media-wrapper--full .media-block--top3places .category.category-video a,
+.media-block--index .category.category-video span,
+.media-block--top3review .category.category-video span,
+.media-block--special .category.category-video span,
+.media-wrapper--full .media-block--top3places .category.category-video span {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
 }
 .media-block--index .title,
 .media-block--top3review .title,
@@ -1101,6 +1114,18 @@
   left: 30px;
   margin-top: 0;
   z-index: 10;
+}
+.media-block--new-review .category.category-video,
+.view-cyprus-reviews.view-display-id-new_reviews .media-block--review-page .category.category-video,
+.media-wrapper--small .media-block--top3places .category.category-video,
+.media-wrapper--half .media-block--top3places .category.category-video,
+.media-wrapper--third .media-block--top3places .category.category-video {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
+  border-radius: 30px;
+  top: 23px;
+  left: 23px;
 }
 .media-block--new-review .text,
 .view-cyprus-reviews.view-display-id-new_reviews .media-block--review-page .text,
@@ -1797,6 +1822,15 @@
   font-weight: bold;
   z-index: 10;
 }
+.media-block--pop-review .category.category-video,
+.media-block--review-page .category.category-video {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
+  border-radius: 30px;
+  top: 23px;
+  left: 23px;
+}
 .media-block--pop-review .text,
 .media-block--review-page .text {
   position: absolute;
@@ -1852,6 +1886,14 @@
 .media-wrapper--third .media-block--pop-review .descr,
 .media-wrapper--third .media-block--review-page .descr {
   display: none;
+}
+.view-id-blog .blog-wrap--1 .col-blog:first-child {
+  margin-left: 37%;
+}
+@media (max-width: 992px) {
+  .view-id-blog .blog-wrap--1 .col-blog:first-child {
+    margin-left: 0;
+  }
 }
 .view-id-blog .blog-wrap--2 .col-blog:first-child {
   margin-left: 25%;
