--- a/css/style.css
+++ b/css/style.css
@@ -1222,6 +1222,9 @@
   color: #24b8d1;
   padding-right: 10px;
 }
+.article-content ol li {
+  margin: 5px 0 5px 30px;
+}
 .article-content h1,
 .article-content h2,
 .article-content h3,
@@ -1921,6 +1924,7 @@
   margin-top: 50px;
 }
 .article-contact-block .article-title {
+  color: #24b8d1;
   font-weight: bold;
   font-size: 18px;
   margin: 0;
@@ -2070,7 +2074,7 @@
   }
 }
 .bloger-block {
-  margin-top: 50px;
+  margin-top: 60px;
   overflow: hidden;
   width: 170px;
   float: left;
@@ -2458,6 +2462,11 @@
   .media-detail--main-photo .category {
     font-size: 12px;
   }
+}
+.media-detail--main-photo .category.category-video {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
 }
 .media-detail--main-photo .title {
   margin: 20px 0;
@@ -4714,6 +4723,10 @@
 .blog-block .title {
   font-size: 15px;
   line-height: 23px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .blog-block .title-wrap {
   height: 70px;
@@ -4742,9 +4755,6 @@
   .blog-wrap--3 .col-lg-3 {
     width: 33.33333333%;
   }
-}
-.media-block--blogs {
-  text-align: center;
 }
 .media-block--blogs .statistic {
   width: 100%;
@@ -4978,6 +4988,18 @@
   padding: 7px 20px;
   border-radius: 30px;
   min-width: 170px;
+}
+.media-block--index .category.category-video a,
+.media-block--top3review .category.category-video a,
+.media-block--special .category.category-video a,
+.media-wrapper--full .media-block--top3places .category.category-video a,
+.media-block--index .category.category-video span,
+.media-block--top3review .category.category-video span,
+.media-block--special .category.category-video span,
+.media-wrapper--full .media-block--top3places .category.category-video span {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
 }
 .media-block--index .title,
 .media-block--top3review .title,
@@ -5238,6 +5260,18 @@
   left: 30px;
   margin-top: 0;
   z-index: 10;
+}
+.media-block--new-review .category.category-video,
+.view-cyprus-reviews.view-display-id-new_reviews .media-block--review-page .category.category-video,
+.media-wrapper--small .media-block--top3places .category.category-video,
+.media-wrapper--half .media-block--top3places .category.category-video,
+.media-wrapper--third .media-block--top3places .category.category-video {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
+  border-radius: 30px;
+  top: 23px;
+  left: 23px;
 }
 .media-block--new-review .text,
 .view-cyprus-reviews.view-display-id-new_reviews .media-block--review-page .text,
@@ -5934,6 +5968,15 @@
   font-weight: bold;
   z-index: 10;
 }
+.media-block--pop-review .category.category-video,
+.media-block--review-page .category.category-video {
+  background-color: #F05A28;
+  background: url(../img/icon-video.svg) no-repeat 10px center #F05A28;
+  padding: 7px 30px 7px 40px;
+  border-radius: 30px;
+  top: 23px;
+  left: 23px;
+}
 .media-block--pop-review .text,
 .media-block--review-page .text {
   position: absolute;
@@ -5989,6 +6032,14 @@
 .media-wrapper--third .media-block--pop-review .descr,
 .media-wrapper--third .media-block--review-page .descr {
   display: none;
+}
+.view-id-blog .blog-wrap--1 .col-blog:first-child {
+  margin-left: 37%;
+}
+@media (max-width: 992px) {
+  .view-id-blog .blog-wrap--1 .col-blog:first-child {
+    margin-left: 0;
+  }
 }
 .view-id-blog .blog-wrap--2 .col-blog:first-child {
   margin-left: 25%;
